# movie-review-analysis

./: analysis.ipynb  get_data.py  imdb_scraper.py  pyproject.toml
