[tool.poetry]
name = "imdb"
version = "0.1.0"
description = ""
authors = ["Yinan Zhou <yinan.a.zhou@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
notebook = "^7.0.0"
pandas = "^2.0.3"
selenium = "4.9.1"
nltk = "^3.8.1"
matplotlib = "^3.7.2"
seaborn = "^0.12.2"
transformers = "^4.31.0"
torch = "^2.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
